# app/Http/Controllers/Api/CategoryController.php
@@ -7,9 +7,23 @@ use App\Http\Requests\StoreCategoryRequest;
 use App\Http\Resources\CategoryResource;
 use App\Models\Category;
 use Illuminate\Support\Str;
+use Knuckles\Scribe\Attributes\Endpoint;
 
+/**
+ * @group Categories
+ *
+ * Managing categories
+ *
+ * @queryParam page int The page number. Defaults to 1.
+ */
 class CategoryController extends Controller
 {
+    /**
+     * Get all categories
+     *
+     * Getting the list of the categories
+     */
+
     public function index()
     {
         abort_if(!auth()->user()->tokenCan('categories-list'), 403);
@@ -17,6 +31,7 @@ class CategoryController extends Controller
         return CategoryResource::class::collection(Category::all());
     }
 
+    #[Endpoint('Show category', description: 'Get a category by ID')]
     public function show(Category $category)
     {
         abort_if(!auth()->user()->tokenCan('categories-show'), 403);
@@ -24,6 +39,13 @@ class CategoryController extends Controller
         return new CategoryResource($category);
     }
 
+    /**
+     * Store a new category
+     *
+     * Creating a new category
+     *
+     * @bodyParam name string required The name of the category. Example: Electronics
+     */
     public function store(StoreCategoryRequest $request)
     {
         $data = $request->all();
