# public/docs/openapi.yaml
@@ -7,28 +7,6 @@ servers:
   -
     url: 'http://laravelapi.test'
 paths:
-  /api/user:
-    get:
-      summary: ''
-      operationId: getApiUser
-      description: ''
-      parameters: []
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      security: []
   /api/list/categories:
     get:
       summary: ''
@@ -184,13 +162,12 @@ paths:
                           type: string
                           example: 'update 2'
       tags:
-        - Endpoints
-      security: []
+        - Categories
   /api/categories:
     get:
-      summary: ''
-      operationId: getApiCategories
-      description: ''
+      summary: 'Get all categories'
+      operationId: getAllCategories
+      description: 'Getting the list of the categories'
       parameters: []
       responses:
         401:
@@ -206,8 +183,7 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
-      security: []
+        - Categories
     post:
       summary: ''
       operationId: postApiCategories
@@ -215,7 +191,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       requestBody:
         required: true
         content:
@@ -226,16 +202,15 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: quos
+                  example: tempore
                   nullable: false
               required:
                 - name
-      security: []
   '/api/categories/{id}':
     get:
-      summary: ''
-      operationId: getApiCategoriesId
-      description: ''
+      summary: 'Show category'
+      operationId: showCategory
+      description: 'Get a category by ID'
       parameters: []
       responses:
         401:
@@ -251,8 +226,7 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
-      security: []
+        - Categories
     put:
       summary: ''
       operationId: putApiCategoriesId
@@ -260,7 +234,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       requestBody:
         required: true
         content:
@@ -271,11 +245,10 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: quae
+                  example: aut
                   nullable: false
               required:
                 - name
-      security: []
     delete:
       summary: ''
       operationId: deleteApiCategoriesId
@@ -283,8 +256,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
-      security: []
+        - Categories
     parameters:
       -
         in: path
@@ -294,6 +266,27 @@ paths:
         required: true
         schema:
           type: integer
+  /api/user:
+    get:
+      summary: ''
+      operationId: getApiUser
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
   /api/products:
     get:
       summary: ''
@@ -314,9 +307,23 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
-      security: []
+        - Products
 tags:
+  -
+    name: Categories
+    description: "\nManaging categories"
   -
     name: Endpoints
     description: ''
+  -
+    name: Products
+    description: 'Managing products'
+components:
+  securitySchemes:
+    default:
+      type: http
+      scheme: bearer
+      description: 'You can retrieve your token by visiting your dashboard and clicking <b>Generate API token</b>.'
+security:
+  -
+    default: []
